# slop-guard-rs

./: .gitignore  .hive.toml  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  slop_guard.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.hive/: project-context.md
06/6396ef5fc9/: metadata.json
06/6396ef5fc9/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
0b/cdeec00047/: metadata.json
0b/cdeec00047/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
1c/26f16e851a/: metadata.json
1c/26f16e851a/0/: content_hash.txt  context.md  full.jsonl  metadata.json
23/ea604b53c7/: metadata.json
23/ea604b53c7/1/: content_hash.txt  full.jsonl  metadata.json
25/51dc9fd55d/: metadata.json
25/51dc9fd55d/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
3b/62344e4f6d/: metadata.json
3b/62344e4f6d/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
be/1f4aeaec46/: metadata.json
be/1f4aeaec46/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
be/1f4aeaec46/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
benchmark/: us_pd_newspapers_histogram.py  us_pd_newspapers_scatter.py
dd/7983918586/: metadata.json
dd/7983918586/0/: content_hash.txt  context.md  full.jsonl  (+2 more)
e4/e7996a28f1/: metadata.json
homebrew-tap/Formula/: slop-guard.rb
hooks/: pre-commit
skills/deslop/: SKILL.md
skills/slop-guard/: SKILL.md
src/: lib.rs  main.rs  rule_tests.rs
tests/: integration.rs
(+7 files in other folders)
